logs/bta.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/bta'...
Listing './lib/python3.5/site-packages/bta/backend'...
Compiling './lib/python3.5/site-packages/bta/backend/mongo.py'...
***   File "./lib/python3.5/site-packages/bta/backend/mongo.py", line 251
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bta/dblog.py'...
***   File "./lib/python3.5/site-packages/bta/dblog.py", line 33
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bta/diff.py'...
***   File "./lib/python3.5/site-packages/bta/diff.py", line 26
    print "==============="
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bta/formatters'...
Compiling './lib/python3.5/site-packages/bta/manage.py'...
***   File "./lib/python3.5/site-packages/bta/manage.py", line 62
    print "%-15s: %s" % (dbn, acts["actions"][-1]["action"])
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bta/miner.py'...
***   File "./lib/python3.5/site-packages/bta/miner.py", line 133
    except AssertionError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bta/miners'...
Compiling './lib/python3.5/site-packages/bta/miners/DN_tree.py'...
***   File "./lib/python3.5/site-packages/bta/miners/DN_tree.py", line 94
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bta/miners/SD_prop.py'...
***   File "./lib/python3.5/site-packages/bta/miners/SD_prop.py", line 30
    print '***** Unknown category (%d) for %s' % (r["objectCategory"], r["objectSid"])
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bta/miners/SD_users.py'...
***   File "./lib/python3.5/site-packages/bta/miners/SD_users.py", line 56
    for sid,lsd in sorted(users.iteritems(), key=lambda (x,y):len(y)):
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bta/miners/can_create.py'...
***   File "./lib/python3.5/site-packages/bta/miners/can_create.py", line 53
    print "Usage <obj> is required !"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bta/miners/domains.py'...
***   File "./lib/python3.5/site-packages/bta/miners/domains.py", line 19
    print "the schema partition distinguish name is mandatory"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bta/miners/password_policy.py'...
***   File "./lib/python3.5/site-packages/bta/miners/password_policy.py", line 38
    print "The root is mandatory, you need to specify the \"cn\" argument"
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bta/miners/schema_modifs.py'...
***   File "./lib/python3.5/site-packages/bta/miners/schema_modifs.py", line 78
    print "the schema partition distinguish name is mandatory"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bta/miners/search_for_right.py'...
***   File "./lib/python3.5/site-packages/bta/miners/search_for_right.py", line 89
    print "Usage <obj> is required ! and must be in %s, %s"%(', '.join(self._types_), self._magic_word_)
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bta/ntds2db.py'...
***   File "./lib/python3.5/site-packages/bta/ntds2db.py", line 239
    def import_file((options, fname, connection)):
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bta/tools'...
Compiling './lib/python3.5/site-packages/bta/tools/RPNedit.py'...
***   File "./lib/python3.5/site-packages/bta/tools/RPNedit.py", line 140
    print "%3i: %r" % (l-i,v)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bta/tools/importer.py'...
***   File "./lib/python3.5/site-packages/bta/tools/importer.py", line 16
    except ImportError,e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bta-0.6.egg-info'...
Listing './lib/python3.5/site-packages/et_xmlfile'...
Listing './lib/python3.5/site-packages/et_xmlfile/tests'...
Listing './lib/python3.5/site-packages/et_xmlfile-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/jdcal-1.3.egg-info'...
Listing './lib/python3.5/site-packages/libesedb'...
Compiling './lib/python3.5/site-packages/libesedb/esetypes.py'...
***   File "./lib/python3.5/site-packages/libesedb/esetypes.py", line 109
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libesedb/libesedb.py'...
***   File "./lib/python3.5/site-packages/libesedb/libesedb.py", line 34
    except OSError,e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openpyxl'...
Listing './lib/python3.5/site-packages/openpyxl/cell'...
Listing './lib/python3.5/site-packages/openpyxl/chart'...
Listing './lib/python3.5/site-packages/openpyxl/chartsheet'...
Listing './lib/python3.5/site-packages/openpyxl/comments'...
Listing './lib/python3.5/site-packages/openpyxl/compat'...
Listing './lib/python3.5/site-packages/openpyxl/descriptors'...
Listing './lib/python3.5/site-packages/openpyxl/drawing'...
Listing './lib/python3.5/site-packages/openpyxl/formatting'...
Listing './lib/python3.5/site-packages/openpyxl/formula'...
Listing './lib/python3.5/site-packages/openpyxl/packaging'...
Listing './lib/python3.5/site-packages/openpyxl/reader'...
Listing './lib/python3.5/site-packages/openpyxl/styles'...
Listing './lib/python3.5/site-packages/openpyxl/utils'...
Listing './lib/python3.5/site-packages/openpyxl/workbook'...
Listing './lib/python3.5/site-packages/openpyxl/workbook/external_link'...
Listing './lib/python3.5/site-packages/openpyxl/worksheet'...
Listing './lib/python3.5/site-packages/openpyxl/writer'...
Listing './lib/python3.5/site-packages/openpyxl/xml'...
Listing './lib/python3.5/site-packages/openpyxl-2.4.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
